[package]
name = "stacklist"
version = "0.1.0"
edition = "2021"

[dependencies]
arbitrary = { version = "1.2", features = ["derive"] }

[features]
alloc = []
nightly = []
default = ["alloc", "nightly"]

[[example]]
name = "basic"

[[example]]
name = "generator"

[[example]]
name = "stack_size"

[[example]]
name = "readme"